--- a/src/main/res/layout/trs_digital_panel.xml
+++ b/src/main/res/layout/trs_digital_panel.xml
@@ -97,7 +97,7 @@
                     android:text="D65"
                     android:tag="Button1"
                     android:layout_marginEnd="10dp"
-                    android:onClick="btnClicked"
+                    android:onClick="btnClicked2"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -113,7 +113,7 @@
                     android:gravity="center"
                     android:text="D50"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:onClick="btnClicked"
+                    android:onClick="btnClicked2"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -127,7 +127,7 @@
                     android:gravity="center"
                     android:text="A"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:onClick="btnClicked"
+                    android:onClick="btnClicked2"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -153,7 +153,7 @@
                     android:layout_height="@dimen/digital_panel_button_height"
                     android:gravity="center"
                     android:text="LED"
-                    android:onClick="btnClicked"
+                    android:onClick="btnClicked2"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -169,7 +169,7 @@
                     android:gravity="center"
                     android:text="TL84"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:onClick="btnClicked"
+                    android:onClick="btnClicked2"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -240,7 +240,7 @@
                     android:gravity="center"
                     android:text="OFF"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:onClick="allOFF"
+                    android:onClick="buttonOFF"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
