--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -17,8 +17,11 @@
 
     <dimen name="button_text_size">16dp</dimen>
     <dimen name="manual_text_size">12sp</dimen>
+    <dimen name="regular_text_size">14sp</dimen>
+    <dimen name="larger_text_size">16sp</dimen>
     <dimen name="digital_panel_button_height">55dp</dimen>
     <dimen name="button_margin">10dp</dimen>
+    <dimen name="button_margin_10dp">10dp</dimen>
 
     <dimen name="main_screen_sidemargin">20dp</dimen>
     <dimen name="recertification_label_width">120dp</dimen>
