--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -25,5 +25,8 @@
 
     <dimen name="main_screen_sidemargin">20dp</dimen>
     <dimen name="recertification_label_width">120dp</dimen>
+    <dimen name="settings_pg_label_width">0.46</dimen>
+    <dimen name="settings_pg_value_width">0.38</dimen>
+
 
 </resources>
