--- a/src/main/res/layout/trs_digital_panel.xml
+++ b/src/main/res/layout/trs_digital_panel.xml
@@ -330,6 +330,7 @@
                         />
 
                     <TextClock
+                        android:id="@+id/textClock1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:format24Hour="H:mm:ss"
