--- a/src/main/res/layout/trs_recertification_page.xml
+++ b/src/main/res/layout/trs_recertification_page.xml
@@ -201,6 +201,7 @@
                 android:layout_marginTop="5dp"
                 android:orientation="vertical"
                 android:id="@+id/lLayout5"
+                android:visibility="gone"
                 >
 
                 <CheckedTextView
@@ -241,7 +242,7 @@
 
                     <EditText
                         android:id="@+id/edit_slave_address"
-                        android:layout_width="150dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Slave address"
                         android:textSize="13sp"
@@ -271,18 +272,18 @@
                     android:layout_width="@dimen/recertification_label_width"
                     android:layout_height="wrap_content"
                     android:id="@+id/DAC_label"
-                    android:text="DAC value: "
+                    android:text="TL84 Dim Value: "
                     android:layout_marginEnd="10dp"
                     />
 
 
                 <EditText
                     android:id="@+id/edit_DACvalue"
-                    android:layout_width="150dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="13sp"
                     android:singleLine="true"
-                    android:hint="DAC value (600-800)"
+                    android:hint="Dim Value (600-800)"
                     android:nextFocusForward="@+id/edit_PSU_current"
                     android:imeOptions="actionNext"
 
@@ -314,7 +315,7 @@
 
                 <EditText
                     android:id="@+id/edit_PSU_current"
-                    android:layout_width="150dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="13sp"
                     android:singleLine="true"
