- allowing for independent validation of DAC value and PSU value on Recertification - extended factory reset with removing all shared prefs - added an app reset after the factory reset

--- a/src/main/res/layout/trs_recertification_page.xml
+++ b/src/main/res/layout/trs_recertification_page.xml
@@ -308,7 +308,7 @@
                     android:layout_width="@dimen/recertification_label_width"
                     android:layout_height="wrap_content"
                     android:id="@+id/DACmax_power_label"
-                    android:text="Max PSU current: "
+                    android:text="Max PSU current (A): "
                     android:layout_marginEnd="10dp"
                     />
 
