defects D067 and D070 fixed

--- a/src/main/res/layout/trs_digital_panel.xml
+++ b/src/main/res/layout/trs_digital_panel.xml
@@ -343,7 +343,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lLayout4"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:id="@+id/lLayout5">
 
 
                 <TextView
@@ -356,6 +357,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/temperature_textview"
+                    android:text=""
+                    android:textColor="@color/black"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/lLayout4"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Firmware version: "
+                    android:textColor="@color/black"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/fw_version"
                     android:text=""
                     android:textColor="@color/black"
                     />
