--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -3,8 +3,12 @@
 <resources>
 
     <style name="MySwitch" parent="@style/Widget.AppCompat.CompoundButton.Switch">
-		<item name="android:textColorPrimaryDisableOnly">#b71c1c</item>
-		<item name="android:colorForeground">#f57f17</item>
-		<item name="android:textAppearance">@style/TextAppearance.AppCompat</item>
-	</style>
+        <item name="android:textColorPrimaryDisableOnly">#b71c1c</item>
+        <item name="android:colorForeground">#f57f17</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat</item>
+    </style>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light" />
+
+
 </resources>
