--- a/src/main/res/layout/list_layout.xml
+++ b/src/main/res/layout/list_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context="com.kiand.LED2match.ListViewDemo"
+    tools:context="com.kiand.LED2match.TRSSequence"
     android:background="#EAEAEA">
 
     <RelativeLayout
