--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -27,6 +27,7 @@
     <dimen name="recertification_label_width">180dp</dimen>
     <dimen name="settings_pg_label_width">0.46</dimen>
     <dimen name="settings_pg_value_width">0.38</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 
 </resources>
